去除冗余的less vars

--- a/src/pages/detail/advanced/index.less
+++ b/src/pages/detail/advanced/index.less
@@ -34,12 +34,12 @@
     align-items: center;
     justify-items: center;
     padding: 20px 10px 24px 20px;
-    border: dashed 1px @component-border;
+    border: dashed 1px var(--td-component-border);
     border-radius: 3px;
 
     .product-sub-icon {
-      background: @brand-color-1;
-      color: @brand-color;
+      background: var(--td-brand-color-1);
+      color: var(--td-brand-color);
       font-size: 33px;
       padding: 8px;
       border-radius: 100%;
@@ -47,7 +47,7 @@
 
     .product-sub {
       font-size: 14px;
-      color: @text-color-secondary;
+      color: var(--td-text-color-secondary);
       margin: 0 auto;
       text-align: center;
       line-height: 22px;
@@ -58,11 +58,11 @@
 
       svg {
         rect {
-          fill: @brand-color-1;
+          fill: var(--td-brand-color-1);
         }
 
         path {
-          fill: @brand-color;
+          fill: var(--td-brand-color);
         }
       }
     }
