--- a/src/pages/detail/base/index.less
+++ b/src/pages/detail/base/index.less
@@ -21,13 +21,13 @@
   .info-item {
     padding: 12px 0;
     display: flex;
-    color: @text-color-primary;
+    color: var(--td-text-color-primary);
 
     h1 {
       width: 200px;
       font-weight: normal;
       font-size: @font-size-base;
-      color: @text-color-secondary;
+      color: var(--td-text-color-secondary);
       text-align: left;
       line-height: 22px;
 
@@ -52,15 +52,15 @@
       width: 8px;
       height: 8px;
       border-radius: @border-radius-50;
-      background: @success-color-5;
+      background: var(--td-success-color-5);
     }
 
     .inProgress {
-      color: @success-color-5;
+      color: var(--td-success-color-5);
     }
 
     .pdf {
-      color: @brand-color;
+      color: var(--td-brand-color);
 
       &:hover {
         cursor: pointer;
@@ -78,7 +78,7 @@
       width: 84px;
       font-family: PingFangSC-Regular;
       font-size: 14px;
-      color: @text-color-secondary;
+      color: var(--td-text-color-secondary);
       text-align: left;
       line-height: 22px;
     }
@@ -92,15 +92,15 @@
       width: 8px;
       height: 8px;
       border-radius: @border-radius-50;
-      background: @success-color-5;
+      background: var(--td-success-color-5);
     }
 
     .green {
-      color: @success-color-5;
+      color: var(--td-success-color-5);
     }
 
     .blue {
-      color: @brand-color-8;
+      color: var(--td-brand-color-8);
     }
   }
 }
