--- a/src/pages/form/base/index.less
+++ b/src/pages/form/base/index.less
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: @bg-color-container;
+  background-color: var(--td-bg-color-container);
   padding: 0 32px 134px;
 
   @media (max-width: @screen-sm-max) {
@@ -21,7 +21,7 @@
     .form-basic-container-title {
       font-size: 20px;
       line-height: 24px;
-      color: @text-color-primary;
+      color: var(--td-text-color-primary);
       margin: 64px 0 32px;
     }
   }
@@ -34,7 +34,7 @@
   justify-content: center;
   padding-top: 30px;
   padding-bottom: 28px;
-  background-color: @bg-color-component;
+  background-color: var(--td-bg-color-component);
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
 
@@ -48,7 +48,7 @@
       .form-submit-upload-span {
         font-size: 14px;
         line-height: 22px;
-        color: @text-color-placeholder;
+        color: var(--td-text-color-placeholder);
         padding-top: 8px;
         display: inline-block;
       }
