--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -28,10 +28,10 @@
   background: var(--td-gray-color-13);
 }
 .t-default-menu:not(.t-menu--dark) .t-menu__item.t-is-active:not(.t-is-opened) {
-  background-color: @brand-color-1;
-  color: @brand-color;
+  background-color: var(--td-brand-color-1);
+  color: var(--td-brand-color);
   .t-icon {
-    color: @brand-color;
+    color: var(--td-brand-color);
   }
 }
 
@@ -135,11 +135,11 @@
       padding: 0 24px;
       height: 32px;
       width: 100%;
-      color: @text-color-primary;
+      color: var(--td-text-color-primary);
     }
 
     &-logo-normal {
-      color: @brand-color;
+      color: var(--td-brand-color);
       font-size: @font-size-l;
       transition: all 0.3s;
     }
@@ -172,7 +172,7 @@
 }
 
 .version-container {
-  color: @text-color-primary;
+  color: var(--td-text-color-primary);
   opacity: 0.4;
 }
 
