--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -9,8 +9,8 @@
   padding: 28px 32px;
   line-height: 28px;
   font-size: 20px;
-  background: @bg-color-container;
-  color: @text-color-primary;
+  background: var(--td-bg-color-container);
+  color: var(--td-text-color-primary);
   text-align: left;
   border-radius: @border-radius;
   display: flex;
@@ -47,7 +47,7 @@
       line-height: 24px;
       margin: 20px 0 6px;
       font-size: 14px;
-      color: @text-color-placeholder;
+      color: var(--td-text-color-placeholder);
     }
 
     &-detail {
@@ -56,7 +56,7 @@
       overflow: hidden;
       line-height: 40px;
       font-size: 14px;
-      color: @text-color-secondary;
+      color: var(--td-text-color-secondary);
     }
   }
 
@@ -67,9 +67,9 @@
 
 .user-intro {
   padding: 32px 24px;
-  background: @brand-color;
+  background: var(--td-brand-color);
   border-radius: @border-radius;
-  color: @text-color-primary;
+  color: var(--td-text-color-primary);
 
   .name {
     line-height: 37px;
@@ -88,7 +88,7 @@
   .user-info {
     line-height: 24px;
     font-size: 14px;
-    color: @text-color-primary;
+    color: var(--td-text-color-primary);
 
     .hiredate,
     .del,
@@ -123,7 +123,7 @@
 
 .content-container {
   margin-top: 16px;
-  background: @bg-color-container;
+  background: var(--td-bg-color-container);
   border-radius: @border-radius;
 }
 
