--- a/src/pages/detail/secondary/index.less
+++ b/src/pages/detail/secondary/index.less
@@ -2,8 +2,8 @@
 
 .secondary-notification {
   background-color: var(--td-bg-color-container);
-  border-radius: @border-radius;
-  padding: @spacer-3 @spacer-4;
+  border-radius: var(--td-border-radius);
+  padding: var(--td-spacer-3) var(--td-spacer-4);
 
   .t-tabs__content {
     padding-top: 0;
@@ -36,7 +36,7 @@
     }
 
     .t-tag.t-size-s {
-      margin-right: @spacer-1;
+      margin-right: var(--td-spacer-1);
       margin-left: 0;
     }
   }
