--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -12,7 +12,7 @@
   background: var(--td-bg-color-container);
   color: var(--td-text-color-primary);
   text-align: left;
-  border-radius: @border-radius;
+  border-radius: var(--td-border-radius);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -37,7 +37,7 @@
   .contract {
     width: 340px;
     height: 88px;
-    border-radius: @border-radius;
+    border-radius: var(--td-border-radius);
     margin: 8px 0;
 
     &-title {
@@ -68,7 +68,7 @@
 .user-intro {
   padding: 32px 24px;
   background: var(--td-brand-color);
-  border-radius: @border-radius;
+  border-radius: var(--td-border-radius);
   color: var(--td-text-color-primary);
 
   .name {
@@ -109,7 +109,7 @@
 
 .product-container {
   margin-top: 16px;
-  border-radius: @border-radius;
+  border-radius: var(--td-border-radius);
 
   .content {
     width: 100%;
@@ -124,7 +124,7 @@
 .content-container {
   margin-top: 16px;
   background: var(--td-bg-color-container);
-  border-radius: @border-radius;
+  border-radius: var(--td-border-radius);
 }
 
 .user-team {
