--- a/src/pages/detail/advanced/index.less
+++ b/src/pages/detail/advanced/index.less
@@ -20,7 +20,7 @@
 
 .product-block-container {
   .t-col-xl-4 + .t-col-xl-4 {
-    @media (max-width: @screen-lg-max) {
+    @media (max-width: var(--td-screen-lg-max)) {
       .operator-gap {
         margin: 16px 0 0 0;
       }
