--- a/src/pages/form/base/index.less
+++ b/src/pages/form/base/index.less
@@ -7,7 +7,7 @@
   background-color: var(--td-bg-color-container);
   padding: 0 32px 134px;
 
-  @media (max-width: @screen-sm-max) {
+  @media (max-width: var(--td-screen-sm-max)) {
     padding: 0 32px 67px;
 
     .form-basic-container-title {
