--- a/src/pages/detail/advanced/index.less
+++ b/src/pages/detail/advanced/index.less
@@ -20,7 +20,7 @@
 
 .product-block-container {
   .t-col-xl-4 + .t-col-xl-4 {
-    @media (max-width: var(--td-screen-lg-max)) {
+    @media (max-width: var(--tdvns-screen-lg-max)) {
       .operator-gap {
         margin: 16px 0 0 0;
       }
@@ -34,12 +34,12 @@
     align-items: center;
     justify-items: center;
     padding: 20px 10px 24px 20px;
-    border: dashed 1px var(--td-component-border);
+    border: dashed 1px var(--tdvns-component-border);
     border-radius: 3px;
 
     .product-sub-icon {
-      background: var(--td-brand-color-1);
-      color: var(--td-brand-color);
+      background: var(--tdvns-brand-color-1);
+      color: var(--tdvns-brand-color);
       font-size: 33px;
       padding: 8px;
       border-radius: 100%;
@@ -47,7 +47,7 @@
 
     .product-sub {
       font-size: 14px;
-      color: var(--td-text-color-secondary);
+      color: var(--tdvns-text-color-secondary);
       margin: 0 auto;
       text-align: center;
       line-height: 22px;
@@ -58,11 +58,11 @@
 
       svg {
         rect {
-          fill: var(--td-brand-color-1);
+          fill: var(--tdvns-brand-color-1);
         }
 
         path {
-          fill: var(--td-brand-color);
+          fill: var(--tdvns-brand-color);
         }
       }
     }
