--- a/src/pages/form/base/index.less
+++ b/src/pages/form/base/index.less
@@ -4,10 +4,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--td-bg-color-container);
+  background-color: var(--tdvns-bg-color-container);
   padding: 0 32px 134px;
 
-  @media (max-width: var(--td-screen-sm-max)) {
+  @media (max-width: var(--tdvns-screen-sm-max)) {
     padding: 0 32px 67px;
 
     .form-basic-container-title {
@@ -21,7 +21,7 @@
     .form-basic-container-title {
       font-size: 20px;
       line-height: 24px;
-      color: var(--td-text-color-primary);
+      color: var(--tdvns-text-color-primary);
       margin: 64px 0 32px;
     }
   }
@@ -34,7 +34,7 @@
   justify-content: center;
   padding-top: 30px;
   padding-bottom: 28px;
-  background-color: var(--td-bg-color-component);
+  background-color: var(--tdvns-bg-color-component);
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
 
@@ -48,7 +48,7 @@
       .form-submit-upload-span {
         font-size: 14px;
         line-height: 22px;
-        color: var(--td-text-color-placeholder);
+        color: var(--tdvns-text-color-placeholder);
         padding-top: 8px;
         display: inline-block;
       }
