--- a/src/pages/form/step/index.less
+++ b/src/pages/form/step/index.less
@@ -1,7 +1,7 @@
 @import '@/style/variables';
 
 .form-step-container {
-  background-color: var(--td-bg-color-container);
+  background-color: var(--tdvns-bg-color-container);
 
   .t-card {
     padding: 8px;
