--- a/src/pages/detail/secondary/index.less
+++ b/src/pages/detail/secondary/index.less
@@ -1,9 +1,9 @@
 @import '@/style/variables.less';
 
 .secondary-notification {
-  background-color: var(--td-bg-color-container);
-  border-radius: var(--td-border-radius);
-  padding: var(--td-spacer-3) var(--td-spacer-4);
+  background-color: var(--tdvns-bg-color-container);
+  border-radius: var(--tdvns-border-radius);
+  padding: var(--tdvns-spacer-3) var(--tdvns-spacer-4);
 
   .t-tabs__content {
     padding-top: 0;
@@ -18,7 +18,7 @@
     padding: 13px 24px 13px 0;
 
     &:hover {
-      background-color: var(--td-bg-color-container-hover);
+      background-color: var(--tdvns-bg-color-container-hover);
 
       .msg-date {
         display: none;
@@ -36,7 +36,7 @@
     }
 
     .t-tag.t-size-s {
-      margin-right: var(--td-spacer-1);
+      margin-right: var(--tdvns-spacer-1);
       margin-left: 0;
     }
   }
@@ -44,7 +44,7 @@
   .content {
     font-family: PingFangSC-Medium;
     font-size: 14px;
-    color: var(--td-text-color-placeholder);
+    color: var(--tdvns-text-color-placeholder);
     text-align: left;
     line-height: 22px;
     overflow: hidden;
@@ -53,7 +53,7 @@
   }
 
   .unread {
-    color: var(--td-brand-color-8);
+    color: var(--tdvns-brand-color-8);
   }
 
   .msg-action {
@@ -68,6 +68,6 @@
     min-height: 443px;
     padding-top: 170px;
     text-align: center;
-    color: var(--td-text-color-primary);
+    color: var(--tdvns-text-color-primary);
   }
 }
