--- a/src/style/index.less
+++ b/src/style/index.less
@@ -3,16 +3,16 @@
 @import './theme/index.less';
 
 body {
-  color: var(--td-text-color-secondary);
-  font-family: -apple-system, BlinkMacSystemFont, var(--td-font-family);
-  font-size: var(--td-font-size-base);
+  color: var(--tdvns-text-color-secondary);
+  font-family: -apple-system, BlinkMacSystemFont, var(--tdvns-font-family);
+  font-size: var(--tdvns-font-size-base);
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   padding: 0;
 }
 
 pre {
-  font-family: var(--td-font-family);
+  font-family: var(--tdvns-font-family);
 }
 
 ul,
@@ -41,22 +41,22 @@ p {
 }
 
 .t-button-link {
-  color: var(--td-brand-color);
+  color: var(--tdvns-brand-color);
   text-decoration: none;
-  margin-right: var(--td-spacer-3);
+  margin-right: var(--tdvns-spacer-3);
   cursor: pointer;
-  transition: color var(--td-anim-duration-base) var(--td-anim-time-fn-easing);
+  transition: color var(--tdvns-anim-duration-base) var(--tdvns-anim-time-fn-easing);
 
   &:hover {
-    color: var(--td-brand-color-hover);
+    color: var(--tdvns-brand-color-hover);
   }
 
   &:active {
-    color: var(--td-brand-color-active);
+    color: var(--tdvns-brand-color-active);
   }
 
   &--active {
-    color: var(--td-brand-color-active);
+    color: var(--tdvns-brand-color-active);
   }
 
   &:focus {
@@ -69,7 +69,7 @@ p {
 }
 
 .t-button + .t-button {
-  margin-left: var(--td-spacer);
+  margin-left: var(--tdvns-spacer);
 }
 
 .container-base-margin-top {
