--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -9,7 +9,7 @@
 
 .dark {
   &.login-wrapper {
-    background-color: @bg-color-page;
+    background-color: var(--tdvns-bg-color-page);
     background-image: url('@/assets/assets-login-bg-black.png');
   }
 }
@@ -35,7 +35,7 @@
   .title {
     font-size: 36px;
     line-height: 44px;
-    color: @text-color-primary;
+    color: var(--tdvns-text-color-primary);
     margin-top: 4px;
 
     &.margin-no {
@@ -52,11 +52,11 @@
       font-size: 14px;
 
       &:first-child {
-        color: @text-color-secondary;
+        color: var(--tdvns-text-color-secondary);
       }
 
       &:last-child {
-        color: @text-color-primary;
+        color: var(--tdvns-text-color-primary);
         cursor: pointer;
       }
     }
@@ -76,13 +76,13 @@
       justify-content: space-between;
 
       .tip {
-        color: @text-color-primary;
+        color: var(--tdvns-text-color-primary);
       }
 
       .refresh {
         display: flex;
         align-items: center;
-        color: @brand-color;
+        color: var(--tdvns-brand-color);
 
         .t-icon {
           font-size: 14px;
@@ -116,11 +116,11 @@
     }
 
     :deep(.t-checkbox__label) {
-      color: @text-color-secondary;
+      color: var(--tdvns-text-color-secondary);
     }
 
     span {
-      color: @brand-color;
+      color: var(--tdvns-brand-color);
 
       &:hover {
         cursor: pointer;
@@ -154,7 +154,7 @@
 
   .tip {
     font-size: 14px;
-    color: @brand-color-8;
+    color: var(--tdvns-brand-color-8);
     cursor: pointer;
     display: inline-flex;
     align-items: center;
@@ -171,7 +171,7 @@
       display: block;
       width: 1px;
       height: 12px;
-      background: @gray-color-3;
+      background: var(--tdvns-gray-color-3);
       margin-left: 14px;
     }
   }
@@ -179,12 +179,12 @@
 
 .check-container {
   font-size: 14px;
-  color: @text-color-secondary;
+  color: var(--tdvns-text-color-secondary);
 
   .tip {
     float: right;
     font-size: 14px;
-    color: @brand-color-8;
+    color: var(--tdvns-brand-color-8);
   }
 }
 
@@ -193,7 +193,7 @@
   position:absolute;
   left: 5%;
   bottom: 64px;
-  color: @text-color-secondary;
+  color: var(--tdvns-text-color-secondary);
 }
 
 @media screen and (max-height: 700px) {
