--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -9,10 +9,10 @@
   padding: 28px 32px;
   line-height: 28px;
   font-size: 20px;
-  background: @bg-color-container;
-  color: @text-color-primary;
+  background: var(--tdvns-bg-color-container);
+  color: var(--tdvns-text-color-primary);
   text-align: left;
-  border-radius: @border-radius;
+  border-radius: var(--tdvns-border-radius);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -37,7 +37,7 @@
   .contract {
     width: 340px;
     height: 88px;
-    border-radius: @border-radius;
+    border-radius: var(--tdvns-border-radius);
     margin: 8px 0;
 
     &-title {
@@ -47,7 +47,7 @@
       line-height: 24px;
       margin: 20px 0 6px;
       font-size: 14px;
-      color: @text-color-placeholder;
+      color: var(--tdvns-text-color-placeholder);
     }
 
     &-detail {
@@ -56,7 +56,7 @@
       overflow: hidden;
       line-height: 40px;
       font-size: 14px;
-      color: @text-color-secondary;
+      color: var(--tdvns-text-color-secondary);
     }
   }
 
@@ -67,9 +67,9 @@
 
 .user-intro {
   padding: 32px 24px;
-  background: @brand-color;
-  border-radius: @border-radius;
-  color: @text-color-primary;
+  background: var(--tdvns-brand-color);
+  border-radius: var(--tdvns-border-radius);
+  color: var(--tdvns-text-color-primary);
 
   .name {
     line-height: 37px;
@@ -88,7 +88,7 @@
   .user-info {
     line-height: 24px;
     font-size: 14px;
-    color: @text-color-primary;
+    color: var(--tdvns-text-color-primary);
 
     .hiredate,
     .del,
@@ -109,7 +109,7 @@
 
 .product-container {
   margin-top: 16px;
-  border-radius: @border-radius;
+  border-radius: var(--tdvns-border-radius);
 
   .content {
     width: 100%;
@@ -123,8 +123,8 @@
 
 .content-container {
   margin-top: 16px;
-  background: @bg-color-container;
-  border-radius: @border-radius;
+  background: var(--tdvns-bg-color-container);
+  border-radius: var(--tdvns-border-radius);
 }
 
 .user-team {
