--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -8,7 +8,7 @@
 }
 
 .t-button + .t-button {
-  margin-left: @spacer;
+  margin-left: var(--tdvns-spacer);
 }
 
 .t-layout.t-layout--with-sider {
@@ -25,13 +25,13 @@
   }
 }
 .t-default-menu.t-menu--dark {
-  background: var(--td-gray-color-13);
+  background: var(--tdvns-gray-color-13);
 }
 .t-default-menu:not(.t-menu--dark) .t-menu__item.t-is-active:not(.t-is-opened) {
-  background-color: @brand-color-1;
-  color: @brand-color;
+  background-color: var(--tdvns-brand-color-1);
+  color: var(--tdvns-brand-color);
   .t-icon {
-    color: @brand-color;
+    color: var(--tdvns-brand-color);
   }
 }
 
@@ -55,7 +55,7 @@
   }
 
   &-content-layout {
-    padding: @spacer-3;
+    padding: var(--tdvns-spacer-3);
   }
 
   &-layout {
@@ -68,13 +68,13 @@
       z-index: 100;
     }
     &-tabs-nav + .@{prefix}-content-layout {
-      padding-top: @spacer-3;
+      padding-top: var(--tdvns-spacer-3);
     }
   }
 
   &-footer-layout {
     padding: 0;
-    margin-bottom: @spacer-2;
+    margin-bottom: var(--tdvns-spacer-2);
   }
 
   // slideBar
@@ -135,12 +135,12 @@
       padding: 0 24px;
       height: 32px;
       width: 100%;
-      color: @text-color-primary;
+      color: var(--tdvns-text-color-primary);
     }
 
     &-logo-normal {
-      color: @brand-color;
-      font-size: @font-size-l;
+      color: var(--tdvns-brand-color);
+      font-size: var(--tdvns-font-size-l);
       transition: all 0.3s;
     }
   }
@@ -172,7 +172,7 @@
 }
 
 .version-container {
-  color: @text-color-primary;
+  color: var(--tdvns-text-color-primary);
   opacity: 0.4;
 }
 
