--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -7,9 +7,12 @@
   width: fit-content;
 }
 
-.t-button + .t-button {
-  margin-left: var(--tdvns-spacer);
+.left-operation-container,.operation-container {
+  .t-button + .t-button {
+    margin-left: var(--tdvns-spacer);
+  }
 }
+
 
 .t-layout.t-layout--with-sider {
   > .t-layout {
