fix: setting radio height

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -13,7 +13,7 @@
 
 .t-jumper-jumper {
   .t-button + .t-button {
-    margin-left: 0
+    margin-left: 0;
   }
 }
 .tdesign-starter-link {
@@ -21,15 +21,15 @@
   text-decoration: none;
   margin-right: 24px;
   cursor: pointer;
-  transition: color .2s cubic-bezier(.38,0,.24,1);
+  transition: color 0.2s cubic-bezier(0.38, 0, 0.24, 1);
 }
 
-.left-operation-container,.operation-container {
+.left-operation-container,
+.operation-container {
   .t-button + .t-button {
     margin-left: var(--tdvns-spacer);
   }
 }
-
 
 .t-layout.t-layout--with-sider {
   > .t-layout {
@@ -199,3 +199,4 @@
 .t-menu__popup {
   z-index: 1000;
 }
+
