fix: 修复A标签样式缺失的问题

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -41,7 +41,7 @@ p {
   box-sizing: border-box;
 }
 
-.t-button-link {
+.t-button-link, a {
   color: var(--tdvns-brand-color);
   text-decoration: none;
   margin-right: var(--tdvns-spacer-3);
