--- a/src/style/index.less
+++ b/src/style/index.less
@@ -9,6 +9,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   padding: 0;
+  margin: 0;
 }
 
 pre {
@@ -40,7 +41,7 @@ p {
   box-sizing: border-box;
 }
 
-.t-button-link {
+.t-button-link, a {
   color: var(--tdvns-brand-color);
   text-decoration: none;
   margin-right: var(--tdvns-spacer-3);
