--- a/src/pages/detail/base/index.less
+++ b/src/pages/detail/base/index.less
@@ -21,21 +21,21 @@
   .info-item {
     padding: 12px 0;
     display: flex;
-    color: var(--tdvns-text-color-primary);
+    color: var(--td-text-color-primary);
 
     h1 {
       width: 200px;
       font-weight: normal;
-      font-size: var(--tdvns-font-size-base);
-      color: var(--tdvns-text-color-secondary);
+      font-size: @font-size-base;
+      color: var(--td-text-color-secondary);
       text-align: left;
       line-height: 22px;
 
-      @media (max-width: var(--tdvns-screen-sm-max)) {
+      @media (max-width: @screen-sm-max) {
         width: 100px;
       }
 
-      @media (min-width: var(--tdvns-screen-md-min)) and (max-width: var(--tdvns-screen-md-max)) {
+      @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
         width: 120px;
       }
     }
@@ -51,16 +51,16 @@
       display: inline-block;
       width: 8px;
       height: 8px;
-      border-radius: var(--tdvns-border-radius-50);
-      background: var(--tdvns-success-color-5);
+      border-radius: @border-radius-50;
+      background: var(--td-success-color-5);
     }
 
     .inProgress {
-      color: var(--tdvns-success-color-5);
+      color: var(--td-success-color-5);
     }
 
     .pdf {
-      color: var(--tdvns-brand-color);
+      color: var(--td-brand-color);
 
       &:hover {
         cursor: pointer;
@@ -78,7 +78,7 @@
       width: 84px;
       font-family: PingFangSC-Regular;
       font-size: 14px;
-      color: var(--tdvns-text-color-secondary);
+      color: var(--td-text-color-secondary);
       text-align: left;
       line-height: 22px;
     }
@@ -91,16 +91,16 @@
       display: inline-block;
       width: 8px;
       height: 8px;
-      border-radius: var(--tdvns-border-radius-50);
-      background: var(--tdvns-success-color-5);
+      border-radius: @border-radius-50;
+      background: var(--td-success-color-5);
     }
 
     .green {
-      color: var(--tdvns-success-color-5);
+      color: var(--td-success-color-5);
     }
 
     .blue {
-      color: var(--tdvns-brand-color-8);
+      color: var(--td-brand-color-8);
     }
   }
 }
