--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -8,7 +8,7 @@
 }
 
 .t-button + .t-button {
-  margin-left: var(--tdvns-spacer);
+  margin-left: @spacer;
 }
 
 .t-jumper-jumper {
@@ -27,7 +27,7 @@
 .left-operation-container,
 .operation-container {
   .t-button + .t-button {
-    margin-left: var(--tdvns-spacer);
+    margin-left: @spacer;
   }
 }
 
@@ -44,18 +44,20 @@
     cursor: pointer;
   }
 }
+
 .t-default-menu.t-menu--dark {
-  background: var(--tdvns-gray-color-13);
+  background: var(--td-gray-color-13);
 }
+
 .t-default-menu:not(.t-menu--dark) .t-menu__item.t-is-active:not(.t-is-opened) {
-  background-color: var(--tdvns-brand-color-1);
-  color: var(--tdvns-brand-color);
+  background-color: var(--td-brand-color-1);
+  color: var(--td-brand-color);
   .t-icon {
-    color: var(--tdvns-brand-color);
+    color: var(--td-brand-color);
   }
 }
 
-.@{prefix} {
+.@{starter-prefix} {
   // 布局元素调整
   &-wrapper {
     height: 100vh;
@@ -75,7 +77,7 @@
   }
 
   &-content-layout {
-    padding: var(--tdvns-spacer-3);
+    padding: @spacer-3;
   }
 
   &-layout {
@@ -87,14 +89,14 @@
       overflow: visible;
       z-index: 100;
     }
-    &-tabs-nav + .@{prefix}-content-layout {
-      padding-top: var(--tdvns-spacer-3);
+    &-tabs-nav + .@{starter-prefix}-content-layout {
+      padding-top: @spacer-3;
     }
   }
 
   &-footer-layout {
     padding: 0;
-    margin-bottom: var(--tdvns-spacer-2);
+    margin-bottom: @spacer-2;
   }
 
   // slideBar
@@ -155,12 +157,12 @@
       padding: 0 24px;
       height: 32px;
       width: 100%;
-      color: var(--tdvns-text-color-primary);
+      color: var(--td-text-color-primary);
     }
 
     &-logo-normal {
-      color: var(--tdvns-brand-color);
-      font-size: var(--tdvns-font-size-l);
+      color: var(--td-brand-color);
+      font-size: @font-size-l;
       transition: all 0.3s;
     }
   }
@@ -192,7 +194,7 @@
 }
 
 .version-container {
-  color: var(--tdvns-text-color-primary);
+  color: var(--td-text-color-primary);
   opacity: 0.4;
 }
 
@@ -200,3 +202,6 @@
   z-index: 1000;
 }
 
+.container-base-margin-top {
+  margin-top: 16px;
+}
