--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -92,6 +92,18 @@
     &-tabs-nav + .@{starter-prefix}-content-layout {
       padding-top: @spacer-3;
     }
+
+    &::-webkit-scrollbar {
+      width: 8px;
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 6px;
+      border: 2px solid transparent;
+      background-clip: content-box;
+      background-color: var(--td-scrollbar-color);
+    }
   }
 
   &-footer-layout {
