--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -16,7 +16,7 @@
     margin-left: 0;
   }
 }
-.tdesign-starter-link {
+.@{starter-prefix}-link {
   color: var(--td-brand-color);
   text-decoration: none;
   margin-right: 24px;
