--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -42,7 +42,6 @@ p {
 a {
   color: var(--td-brand-color);
   text-decoration: none;
-  margin-right: @spacer-3;
   cursor: pointer;
   transition: color @anim-duration-base @anim-time-fn-easing;
 
@@ -61,6 +60,10 @@ a {
   &:focus {
     text-decoration: none;
   }
+}
+
+.t-button-link {
+  margin-right: @spacer-3;
 
   &:last-child {
     margin-right: 0;
