feat: upgrade vars

--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -152,7 +152,7 @@
 
   .tip {
     font-size: 14px;
-    color: var(--td-brand-color-8);
+    color: var(--td-brand-color);
     cursor: pointer;
     display: inline-flex;
     align-items: center;
@@ -182,7 +182,7 @@
   .tip {
     float: right;
     font-size: 14px;
-    color: var(--td-brand-color-8);
+    color: var(--td-brand-color);
   }
 }
 
