feat: replace vars

--- a/src/pages/detail/base/index.less
+++ b/src/pages/detail/base/index.less
@@ -49,7 +49,7 @@
       display: inline-block;
       width: 8px;
       height: 8px;
-      border-radius: @border-radius-50;
+      border-radius: var(--td-radius-circle);
       background: var(--td-success-color-5);
     }
 
@@ -74,7 +74,7 @@
 
     h1 {
       width: 84px;
-      font-family: PingFangSC-Regular;
+      font-family: var(--td-font-family);
       font-size: 14px;
       color: var(--td-text-color-secondary);
       text-align: left;
@@ -89,7 +89,7 @@
       display: inline-block;
       width: 8px;
       height: 8px;
-      border-radius: @border-radius-50;
+      border-radius: var(--td-radius-circle);
       background: var(--td-success-color-5);
     }
 
