--- a/src/pages/detail/secondary/index.less
+++ b/src/pages/detail/secondary/index.less
@@ -1,7 +1,7 @@
 .secondary-notification {
   background-color: var(--td-bg-color-container);
-  border-radius: @border-radius;
-  padding: @spacer-3 @spacer-4;
+  border-radius: var(--td-radius-default);
+  padding: var(--td-comp-paddingTB-xl) var(--td-comp-paddingLR-xxl);
 
   .t-tabs__content {
     padding-top: 0;
@@ -34,7 +34,7 @@
     }
 
     .t-tag.t-size-s {
-      margin-right: @spacer-1;
+      margin-right: var(--td-comp-margin-s);
       margin-left: 0;
     }
   }
