--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -10,7 +10,7 @@
   background: var(--td-bg-color-container);
   color: var(--td-text-color-primary);
   text-align: left;
-  border-radius: @border-radius;
+  border-radius: var(--td-radius-default);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -35,7 +35,7 @@
   .contract {
     width: 340px;
     height: 88px;
-    border-radius: @border-radius;
+    border-radius: var(--td-radius-default);
     margin: 8px 0;
 
     &-title {
@@ -66,7 +66,7 @@
 .user-intro {
   padding: 32px 24px;
   background: var(--td-brand-color);
-  border-radius: @border-radius;
+  border-radius: var(--td-radius-default);
   color: var(--td-text-color-primary);
 
   .name {
@@ -107,7 +107,7 @@
 
 .product-container {
   margin-top: 16px;
-  border-radius: @border-radius;
+  border-radius: var(--td-radius-default);
 
   .content {
     width: 100%;
@@ -122,7 +122,7 @@
 .content-container {
   margin-top: 16px;
   background: var(--td-bg-color-container);
-  border-radius: @border-radius;
+  border-radius: var(--td-radius-default);
 }
 
 .user-team {
