--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -1,7 +1,7 @@
 // 对部分样式进行重置
 body {
   color: var(--td-text-color-secondary);
-  font-family: -apple-system, BlinkMacSystemFont, @font-family;
+  font-family: -apple-system, BlinkMacSystemFont, var(--td-font-family);
   font-size: @font-size-base;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
@@ -10,7 +10,7 @@ body {
 }
 
 pre {
-  font-family: @font-family;
+  font-family: var(--td-font-family);
 }
 
 ul,
@@ -63,7 +63,7 @@ a {
 }
 
 .t-button-link {
-  margin-right: @spacer-3;
+  margin-right: var(--td-comp-margin-xxl);
 
   &:last-child {
     margin-right: 0;
