feat: remove variables

--- a/src/pages/detail/base/index.less
+++ b/src/pages/detail/base/index.less
@@ -23,11 +23,10 @@
 
     h1 {
       width: 200px;
-      font-weight: normal;
-      font-size: @font-size-base;
+      font: var(--td-font-body-medium);
       color: var(--td-text-color-secondary);
+      font-weight: normal;
       text-align: left;
-      line-height: 22px;
 
       @media (max-width: @screen-sm-max) {
         width: 100px;
