--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -173,7 +173,7 @@
 
     &-logo-normal {
       color: var(--td-brand-color);
-      font-size: @font-size-l;
+      font: var(--td-font-body-large);
       transition: all 0.3s;
     }
   }
