--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -2,8 +2,7 @@
 body {
   color: var(--td-text-color-secondary);
   font-family: -apple-system, BlinkMacSystemFont, var(--td-font-family);
-  font-size: @font-size-base;
-  line-height: 1.5;
+  font: var(--td-font-body-medium);
   -webkit-font-smoothing: antialiased;
   padding: 0;
   margin: 0;
