--- a/src/style/variables.less
+++ b/src/style/variables.less
@@ -1,25 +1,7 @@
 /** 公共前缀 */
 @starter-prefix: tdesign-starter;
 
-// 组件库本身只有色彩相关的css token 扩展其他css token使用 待组件库扩充其他token后再做替换 这里使用less vars 避免两种css token让使用者混淆
-// tdesign 只保持一套token即可
-
-// Font
-@font-size: 10px;
-@font-size-s: calc(@font-size * 1.2); // 字号-五级字号
-@font-size-base: calc(@font-size * 1.4); // 字号-四级字号
-@font-size-l: calc(@font-size * 1.6); // 字号-三级字号
-@font-size-xl: calc(@font-size * 2); // 字号-二级字号
-@font-size-xxl: calc(@font-size * 3.6); // 字号-一级字号
-
-// Line Height
-@line-height: 1.5; // 行高-常规
-@line-height-s: 20px; // 行高-对应五级文字
-@line-height-base: 22px; // 行高-对应四级文字
-@line-height-l: 24px; // 行高-对应三级文字
-@line-height-xl: 28px; // 行高-对应二级文字
-@line-height-xxl: 44px; //行高-对应一级文字
-
+// 颜色、尺寸、阴影、圆角、字体 variables 请参考 https://tdesign.tencent.com/starter/docs/vue/design-token
 // 响应式断点
 @screen-sm: 768px;
 @screen-md: 992px;
