Feat/upgrade style (#365)
* feat: upgrade vars

* feat: replace vars

* feat: remove variables

--- a/src/pages/detail/base/index.less
+++ b/src/pages/detail/base/index.less
@@ -23,11 +23,10 @@
 
     h1 {
       width: 200px;
-      font-weight: normal;
-      font-size: @font-size-base;
+      font: var(--td-font-body-medium);
       color: var(--td-text-color-secondary);
+      font-weight: normal;
       text-align: left;
-      line-height: 22px;
 
       @media (max-width: @screen-sm-max) {
         width: 100px;
@@ -49,7 +48,7 @@
       display: inline-block;
       width: 8px;
       height: 8px;
-      border-radius: @border-radius-50;
+      border-radius: var(--td-radius-circle);
       background: var(--td-success-color-5);
     }
 
@@ -74,7 +73,7 @@
 
     h1 {
       width: 84px;
-      font-family: PingFangSC-Regular;
+      font-family: var(--td-font-family);
       font-size: 14px;
       color: var(--td-text-color-secondary);
       text-align: left;
@@ -89,7 +88,7 @@
       display: inline-block;
       width: 8px;
       height: 8px;
-      border-radius: @border-radius-50;
+      border-radius: var(--td-radius-circle);
       background: var(--td-success-color-5);
     }
 
@@ -98,7 +97,7 @@
     }
 
     .blue {
-      color: var(--td-brand-color-8);
+      color: var(--td-brand-color);
     }
   }
 }
