fix: layout height

--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -80,7 +80,7 @@
   }
 
   &-layout {
-    height: calc(100vh - 64px);
+    height: calc(100vh - var(--td-comp-size-xxxl));
     overflow-y: scroll;
     &-tabs-nav {
       max-width: 100%;
