--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -83,7 +83,7 @@
   }
 
   &-content-layout {
-    padding: var(--td-comp-paddingTB-xxl) var(--td-comp-paddingLR-xxl);
+    padding: var(--td-comp-paddingTB-xl) var(--td-comp-paddingLR-xl);
   }
 
   &-layout {
