fix: form page style bug

--- a/src/pages/form/step/index.less
+++ b/src/pages/form/step/index.less
@@ -1,35 +1,21 @@
 .form-step-container {
   background-color: var(--td-bg-color-container);
+  padding: var(--td-comp-paddingTB-xxl) var(--td-comp-paddingLR-xxl);
+  border-radius: var(--td-radius-medium);
 
   .t-card {
-    padding: 8px;
+    :deep(.t-card__body) {
+      padding: 0;
+    }
   }
 }
 
 .rule-tips {
-  margin: 8px 24px 0;
+  margin-top: var(--td-comp-margin-xxxl);
 }
 
-.step-container {
-  padding: 8px 24px 0;
-}
 
 .step-form {
-  padding: 24px;
+  margin-top: var(--td-comp-margin-xxxl);
 }
 
-.step-form-4 {
-  padding: 66px 0 90px 0;
-  text-align: center;
-  > .t-icon {
-    margin-bottom: 16px;
-  }
-  > .text {
-    font-size: 20px;
-    font-weight: 500;
-    margin-bottom: 8px;
-  }
-  > .button-group {
-    margin-top: 32px;
-  }
-}
