--- a/src/pages/form/base/index.less
+++ b/src/pages/form/base/index.less
@@ -3,13 +3,14 @@
   align-items: center;
   justify-content: center;
   background-color: var(--td-bg-color-container);
-  padding: 0 32px 134px;
+  border-radius: var(--td-radius-medium) var(--td-radius-medium) 0 0;
+  padding: var(--td-comp-paddingTB-xxl) var(--td-comp-paddingLR-xxl) 80px var(--td-comp-paddingLR-xxl);
 
   @media (max-width: @screen-sm-max) {
-    padding: 0 32px 67px;
+    padding: var(--td-comp-paddingTB-xl) var(--td-comp-paddingLR-xl) 80px var(--td-comp-paddingLR-xl);
 
     .form-basic-container-title {
-      margin: 32px 0 32px;
+      margin: 0 0 var(--td-comp-margin-xxxl) 0;
     }
   }
 
@@ -17,10 +18,14 @@
     width: 676px;
 
     .form-basic-container-title {
-      font-size: 20px;
-      line-height: 24px;
+      font: var(--td-font-title-large);
+      font-weight: 400;
       color: var(--td-text-color-primary);
-      margin: 64px 0 32px;
+      margin: var(--td-comp-margin-xxl) 0 var(--td-comp-margin-xl) 0;
+    }
+
+    .form-title-gap {
+      margin: calc(var(--td-comp-margin-xxl) * 2) 0 var(--td-comp-margin-xl) 0;
     }
   }
 }
@@ -30,11 +35,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 30px;
-  padding-bottom: 28px;
-  background-color: var(--td-bg-color-component);
-  border-bottom-left-radius: 3px;
-  border-bottom-right-radius: 3px;
+  padding-top: var(--td-comp-paddingLR-xl);
+  padding-bottom: var(--td-comp-paddingLR-xl);
+  background-color: var(--td-bg-color-secondarycontainer);
+  border-bottom-left-radius: var(--td-radius-medium);
+  border-bottom-right-radius: var(--td-radius-medium);
+  border-top: 1px solid var(--td-component-stroke);
 
   .form-submit-sub {
     width: 676px;
